--- a/backend/static/matches.css
+++ b/backend/static/matches.css
@@ -1,4 +1,21 @@
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
 
+th, td {
+    padding: 10px;
+    border-bottom: 1px solid black;
+}
+
+th {
+    height: 50px;
+    text-align: center;
+    background-color: #f48b6d;
+    color: white;
+}
+
+tr:hover {background-color: #f48b6d;}
 
 .boxed{
     padding: 70px;
