--- a/backend/templates/matchpage.html
+++ b/backend/templates/matchpage.html
@@ -26,10 +26,30 @@ extends profile.html
         <div id = "matchingDescription">
             <h3> 
                 Hello! Congratulations on getting matched!
+            </h3>
+            <h4>
                 Here you'll see people who you matched with. Take a look at what language you will help them with and which language they will help you with!
                 If you click on the "Add Friend" button, you will be able to communicate with them! 
-            </h3>
+            </h4>
         </div>
+        <div id="tblofmatches">
+            <table style ="width:100%">
+                <tr>
+                    <th>Name</th>
+                    <th>Match Language</th>
+                    <th>Add Friend!</th>
+                </tr>
+                {% for username, language in matches.items() %}
+                <tr>
+                    <td>{{username}}</td>
+                    <td>{{language}}</td>
+                    <td><button class="button" id="friend_button" name="friend_button" onclick='add_friend()'>Add Friend</button></td>
+                </tr>
+                {% endfor %}
+            </table>
+        </div>
+   
+        <!---
         <div id = "matches">
             {% for username, language in matches.items() %}
                 <div class="boxed">
@@ -40,5 +60,6 @@ extends profile.html
                 
             {% endfor %}
         </div>
+        -->
     </div>
 {% endblock%}
