--- a/backend/templates/matchpage.html
+++ b/backend/templates/matchpage.html
@@ -43,7 +43,11 @@ extends profile.html
                 <tr>
                     <td>{{username}}</td>
                     <td>{{language}}</td>
-                    <td><button class="button" id="{{username}}" name="friend_button" onclick='addFriend("{{username}}")'>Add Friend</button></td>
+                    <td>
+                       <form name="add_friend" method="POST" action='/match'>
+                            <button class="submit" value="{{username}}" id="{{username}}" name="friend_button" onclick='addFriend()'>Add Friend</button>
+                        </form>
+                    </td>
                 </tr>
                 {% endfor %}
             </table>
@@ -54,14 +58,16 @@ extends profile.html
                 if(x.innerHTML == "Add Friend")
                 {
                     x.innerHTML = "Friend Added!";
-                    setTimeout(() => {x.innerHTML = "Remove Friend";}, 2000);
                 }
-                else if (x.innerHTML == "Remove Friend")
-                {
-                    x.innerHTML = "Friend Removed!";
-                    setTimeout(() => {x.innerHTML = "Add Friend";}, 2000);
-                }
-                //add_friend(); for implementing Friends page in app.py
+                $.getJSON('/match', add_friend(username));
+                alert("test");
+                /*window.location.href = "/match/" + username;
+                $.post("/match", {
+                    create_username: JSON.stringify(username)
+                }, function(err, req, resp){
+                    window.location.href = "/match/" + resp["responseJSON"];
+                });
+                */
             }
         </script>
         
